--- a/Conference/Conference/appsettings.json
+++ b/Conference/Conference/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.147.58;User Id=ws;Password=Qwerty123$;Database=ReleaseConference;Encrypt=false"
+  }
 }
