--- a/Conference/Conference/appsettings.json
+++ b/Conference/Conference/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.147.58;User Id=ws;Password=Qwerty123$;Database=LastDatabase;Encrypt=false"
+    "DefaultConnection": "Server=192.168.147.58;User Id=ws;Password=Qwerty123$;Database=ConferenceClean;Encrypt=false"
   }
 }
