--- a/Conference/Conference/appsettings.json
+++ b/Conference/Conference/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "Issuer": "Author",
+    "Audience": "Audience",
+    "Key": "*RasjajduehfyqweUHFuihashfuiasnfjk12390@@$W(#U#HRNF#"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
