--- a/Conference/Conference/appsettings.json
+++ b/Conference/Conference/appsettings.json
@@ -12,6 +12,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=Conference;User Id=postgres;Password=Artem2005!!;"
+    "DefaultConnection": "Server=192.168.147.58;User Id=ws;Password=Qwerty123$;Database=ConferenceClean;Encrypt=false"
   }
 }
