--- a/Conference/Conference/appsettings.json
+++ b/Conference/Conference/appsettings.json
@@ -12,6 +12,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.147.58;User Id=ws;Password=Qwerty123$;Database=DemonstrationDatabase;Encrypt=false"
+    "DefaultConnection": ""
   }
 }
